Har gjort metod i CardDeck classen för att sortera ut kort. Håller på med SorteraKortlekEfterSvårighetsgrad i Spelinställningar.

--- a/Projekt 21an/Projekt 21an.csproj
+++ b/Projekt 21an/Projekt 21an.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\CardGames\CardGames.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ÖversattKortlek\" />
+  </ItemGroup>
+
 </Project>
