Mittupp i allt: -Håller på med InitializeDatabaseLocationPath -Gjort interface och klasser för olika platformar -Börjat fixa så jag kan ha dynamic paths/conn.strings

--- a/Projekt 21an/Projekt 21an.csproj
+++ b/Projekt 21an/Projekt 21an.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.0-preview3.24332.3" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.1" />
+    <PackageReference Include="SQLite" Version="3.13.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +21,12 @@
 
   <ItemGroup>
     <Folder Include="ÖversattKortlek\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="_21anDB.mdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
