Har ändrat till SQLite istället för MS SQL Server. Justerat metoder mm i SqlMetoder. Lagt till databasfilen till projektet. -Fixat dynamiska variabler för paths och connectionstrings. Går att justera till olika platformar.

--- a/Projekt 21an/Projekt 21an.csproj
+++ b/Projekt 21an/Projekt 21an.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Projekt_21an_sqliteDB.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Projekt_21an_sqliteDB.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.0-preview3.24332.3" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.1" />
